--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>TakoMatic</title>
+
+  <link rel="shortcut icon" href="/images/tako_.png">
+  <link rel="stylesheet" type="text/css" href="bower_components/bulma/css/bulma.css">
 </head>
 <body>
 
