explorando MapBox, se ve algo mejor que gMaps

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
   <link rel="shortcut icon" href="/images/tako_.png">
   <link rel="stylesheet" type="text/css" href="bower_components/bulma/css/bulma.css">
+  <link rel="stylesheet" type="text/css" href="//unpkg.com/leaflet@0.7.7/dist/leaflet.css">
 </head>
 <body>
 
