--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
   <title>TakoMatic</title>
 
   <link rel="shortcut icon" href="/images/tako_.png">
+  <link rel="stylesheet" href="styles/font-awesome.min.css">
+  <link rel="stylesheet" href="bower_components/Leaflet.awesome-markers/dist/leaflet.awesome-markers.css">
   <link rel="stylesheet" type="text/css" href="bower_components/bulma/css/bulma.css">
   <link rel="stylesheet" type="text/css" href="//unpkg.com/leaflet@0.7.7/dist/leaflet.css">
+  <link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
 <body>
 
